overflow fixed

--- a/src/styles/ComingSoon/styles.module.css
+++ b/src/styles/ComingSoon/styles.module.css
@@ -5,6 +5,7 @@
     background-repeat: no-repeat;
     background-position: center;
     min-height: 100vh;
+    height: 100%;
     width: 100%;
     position: relative;
 }
